@@ -4,6 +4,7 @@
 	to override --enable-tiny.
 	* src/rcfile.c (check_vitals_mapped): Do not allow 'set quiet'
 	to suppress a fatal-error message, make sure the user sees it.
+	* src/color.c: Comment tweaks.
 
 2014-04-03  Benno Schulenberg  <bensberg@justemail.net>
 	* configure.ac: Remove unused '*_support' variables.
